--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,19 @@ test/javasource/
 test/deployment/
 test/.classpath
 test/.project
+test/theme/
+test/userlib/
+test/.classpath
+test/.project
 *.launch
 *.tmp
 *.lock
-test/zip Progress Bar.bat
 .idea/
+
+dist/
+
+node_modules/
+.editorconfig
+*DS_Store*
+.vscode/
+*.bak
